...
        android:hint="@string/habit_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addHabitTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/habitNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
            android:layout_marginStart="8dp"
            android:text="@string/positive_scoring"
            android:checked="true" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addHabitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_habit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
