...
                android:layout_weight="1"
                android:text="@string/sleep_tracking_title"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/viewAnalysisButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/sleep_view_analysis"
                android:padding="8dp"
                android:src="@android:drawable/ic_menu_search" />
...
