...
            android:src="@drawable/ic_chart"
            android:contentDescription="@string/nav_stats"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/imprintButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/imprint_title"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside" />
...
